--- a/index.html
+++ b/index.html
@@ -3,12 +3,28 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Смарт-Экспресс - сайт находится в разработке</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" tipe='text/css' media="screen" href="main.css">
-    <script src="main.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="#services">Услуги</a>
+            <a href="#contacts">Контакты</a>
+        </nav>
+        <div>
+            Наш e-mail: <a href="mailyo:mail@mail.ru">mail@mail.ru</a>
+        </div>
+        <div>
+            <a href="tel:+79039999999">+7 903 999 99 99</a>
+            <batton>Заказать звонок</batton>
+        </div>
+        <div>
+            <a href="tel:+79639999999">+7 963 999 99 99</a>
+            <batton>Заказать звонок</batton>
+        </div>
+    </header>
     
 </body>    
 </html>
