--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             Наш e-mail: <a href="mailyo:mail@mail.ru">mail@mail.ru</a>
         </div>
         <div>
+            Наш e-mail: <a href="mailyo:email@mail.ru">mail@mail.ru</a>
+        </div>
+        <div>
          <a href="tel:+79639999999">+7 963 999 99 99</a>
             <batton>Заказать звонок</batton>
         </div>
