basket delivery options block added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <batton>Заказать звонок</batton>
         </div>
     </header>
+    <h2>Выберите способ доставки</h2>
     
 </body>    
 </html>
