--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         </div>
         <div>
          <a href="tel:+79639998899">+7 963 999 88 99</a>
->>>>>>> 5d399c0aeca00e3b99383a91f328b1c00f8f0d48
             <batton>Заказать звонок</batton>
             <batton>new batton</batton>
             <batton>cencel</batton>
         </div>
+        <div>Звоните нам по телефону: +7 909 999 99</div>
     </header>
     <h2>Выберите способ доставки</h2>
     
