--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Смарт-Экспресс - сайт находится в разработке</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="scripts.js"></script>
 </head>
 <body>
     <header>
@@ -18,7 +19,6 @@
         </div>
         <div>
          <a href="tel:+79639998899">+7 963 999 88 99</a>
->>>>>>> 5d399c0aeca00e3b99383a91f328b1c00f8f0d48
             <batton>Заказать звонок</batton>
         </div>
         <div>Звоните нам по телефону : -7 999 999 99 99</div>
